# reddit_downloader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  PLAN.md  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
src/reddit_downloader/: __init__.py  __main__.py  client.py  downloader.py  jobs.py  parser.py  security.py  types.py
src/reddit_downloader/tui/: __init__.py  app.py
src/reddit_downloader/web/: __init__.py  app.py  jobs.py
src/reddit_downloader/web/static/css/: style.css
src/reddit_downloader/web/static/js/: main.js
src/reddit_downloader/web/templates/: index.html
tests/: __init__.py  test_cli.py  test_client.py  test_downloader.py  test_jobs.py  test_parser.py  test_security.py  test_tui.py  test_web_app.py  test_web_jobs.py
