[project]
name = "reddit-downloader"
version = "0.1.0"
description = "Download media from Reddit posts and user profiles with CLI, library, and web interface support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "praw>=7.7.1",
    "requests>=2.31.0",
    "python-dotenv>=1.2.1",
    "textual>=1.0.0",
    "textual-serve>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reddit_downloader"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["praw", "praw.*", "prawcore", "prawcore.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "ANN"]
ignore = [
    "ANN401",  # Allow typing.Any in function signatures (*args, **kwargs)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=reddit_downloader"
